fixed alignment in roadmap section'''

--- a/packages/client/src/styles/local/components/roadmap.module.css
+++ b/packages/client/src/styles/local/components/roadmap.module.css
@@ -7,7 +7,7 @@
         padding: 5.5rem 0;
     }
     .roadmapItem{
-        width: 75%;
+        width: 100%;
         margin: 0 auto;
     }
     .sectionContent h1{
@@ -53,6 +53,10 @@
     }
 }
 @media all and (min-width: 1280px){
+     .roadmapItem{
+        width: 75%;
+        margin: 0 auto;
+    }
    .sectionContent{
         padding: 9.5rem 0;
     }
